[project]
name = "liam-test-sound-project"
version = "0.1.0"
description = "My Python project"
requires-python = ">=3.11"
dependencies = [
    # Add your PyPI dependencies here
    "sounddevice>=0.5.5",
    "vosk>=0.3.45",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
